# my_online_ik

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_log.txt  funny2.mot  funny_result.mot  grep  main.cpp  offline.cpp  output_results.mot
build_support/Concurrency/: ConcurrencyConfig.cmake  cmake_uninstall.cmake  install_manifest.txt
build_support/Concurrency/tests/: latch  queue
build_support/Filter/: FilterConfigForInstall.cmake  cmake_uninstall.cmake  install_manifest.txt
build_support/Filter/tests/: Test_Filter
data/: scapula.osim  upperlimb-biorob-1.osim  upperlimb-biorob_nomuscle.osim
data/ExperimentalData/: abdbonepin.trc  abdbonepinstatic.trc  flxbonepin.trc  flxbonepinstatic.trc  readme.txt  rotbonepin.trc  rotbonepinstatic.trc
data/Geometry/: jaw.vtp  skull.vtp  vtpbinary2ascii.py
data/docs_scaling_IK/: IK_setup_01.xml  IK_task_01.xml  IK_task_scapula.xml  Model_01_scaled_final.osim  Model_01_scaled_output.osim  Model_01_scaled_step1.osim  Model_01_scaled_step1_output.xml  Scaling_measure_set_01.xml  Scaling_setup_01.xml  Scaling_task_01.xml
data/models/: full_upper_body_marks.osim  upperlimb-biorob.osim
scripts/: build_all.sh  env.sh
